<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">


    <androidx.cardview.widget.CardView

        android:id="@+id/card_view"
        android:layout_width="328dp"
        android:layout_height="288dp"
        android:layout_marginTop="52dp"
        app:cardBackgroundColor="@color/purple_200"
        app:cardCornerRadius="40dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toTopOf="@+id/addSpesaButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="306dp"
                android:layout_height="95dp"

                app:cardCornerRadius="40dp"
                app:cardElevation="3dp"
                app:cardBackgroundColor="@color/white">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tagMView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded_corner_view"

                        android:text="@string/TagMichele"
                        android:gravity="center"
                        android:textSize="30sp"
                        android:textColor="@color/white"
                        android:layout_weight=".70">

                    </TextView>

                    <TextView
                        android:id="@+id/debitoViewMichele"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:gravity="center"
                        android:textSize="30sp"
                        android:textColor="@color/black"
                        android:layout_weight=".30">

                    </TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="306dp"
                android:layout_height="95dp"
                android:layout_marginTop="30dp"
                app:cardBackgroundColor="@color/white"

                app:cardCornerRadius="40dp"
                app:cardElevation="3dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tagEView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded_corner_view"
                        android:text="@string/TagElena"
                        android:gravity="center"
                        android:textSize="30sp"
                        android:textColor="@color/white"
                        android:layout_weight=".70">

                    </TextView>

                    <TextView
                        android:id="@+id/debitoViewElena"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"

                        android:gravity="center"
                        android:textSize="30sp"
                        android:textColor="@color/black"
                        android:layout_weight=".30">

                    </TextView>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>



    <Button
        android:id="@+id/addSpesaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textButtonAddSpesa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727" />


</androidx.constraintlayout.widget.ConstraintLayout>